3r12lp3rko\1t3k\[ot1ok\[1tk\k[12\4t

--- a/src/main/resources/assets/newgenstory_fanatic_version/lang/en_us.json
+++ b/src/main/resources/assets/newgenstory_fanatic_version/lang/en_us.json
@@ -3,8 +3,8 @@
   "item.newgenstory_fanatic_version.the_lomgds_spawn_egg": "TheLomgds Spawn Egg",
   "item.newgenstory_fanatic_version.fairy_lololoshka_21_spawn_egg": "Fairy Spawn Egg",
   "item.newgenstory_fanatic_version.fragment_3": "Fragment",
-  "item.newgenstory_fanatic_version.runa_ganon": "Runa Ganon",
   "subtitles.vinks": "",
+  "item.newgenstory_fanatic_version.runa_ganon": "Runa Ganon",
   "entity.newgenstory_fanatic_version.fairy": "Fairy",
   "item.newgenstory_fanatic_version.zeit_boots": "Zeit Boots",
   "item.newgenstory_fanatic_version.abysal_gem": "Abysal Gem",
@@ -27,6 +27,7 @@
   "entity.newgenstory_fanatic_version.leftarion_start": "Лефтерион",
   "item.newgenstory_fanatic_version.magic_map": "Magic Map",
   "item.newgenstory_fanatic_version.leftarion_spawn_egg": "Лефтерион Spawn Egg",
+  "entity.newgenstory_fanatic_version.villager_n": "Villager N",
   "item.newgenstory_fanatic_version.magic_fire": "Magic Fire",
   "item.newgenstory_fanatic_version.improved_hazmat_helmet": "Improved Hazmat Helmet",
   "item.newgenstory_fanatic_version.gorbatic_start_spawn_egg": "Горбатик Spawn Egg",
@@ -59,6 +60,7 @@
   "entity.newgenstory_fanatic_version.fairy_lololoshka_21": "Fairy",
   "item.newgenstory_fanatic_version.zeit_chestplate": "Zeit Body",
   "item.newgenstory_fanatic_version.medalion": "Medalion",
+  "item.newgenstory_fanatic_version.villager_n_spawn_egg": "Villager N Spawn Egg",
   "item.newgenstory_fanatic_version.dogovor": "Dogovor",
   "item.newgenstory_fanatic_version.kazmur_spawn_egg": "kazmur Spawn Egg",
   "item.newgenstory_fanatic_version.fragment_32": "Fragment",
